--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ h1 {
     text-align: center;
 }
 
-.controls, .game-controls {
+.controls {
     display: flex;
     justify-content: space-between;
     width: 90%;
@@ -101,4 +101,38 @@ button:hover {
         padding-top: 0;
         height: 40px;
     }
+}
+
+/* Modal styling */
+.modal {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.6);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+.modal-content {
+    background: white;
+    padding: 20px;
+    text-align: center;
+    border-radius: 5px;
+}
+
+.modal-content h2 {
+    margin-bottom: 20px;
+}
+
+.modal-content button {
+    background-color: #2196f3;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    cursor: pointer;
+    font-size: 1.2rem;
+    border-radius: 5px;
 }
