--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ body {
     text-align: center;
     width: 100%;
     max-width: 400px;
+    position: relative;
 }
 
 h1 {
@@ -30,20 +31,19 @@ h1 {
     color: #333;
 }
 
+/* Hamburger Menu Style */
+#menu-toggle {
+    position: absolute;
+    top: 10px;
+    right: 20px;
+    font-size: 30px;
+    cursor: pointer;
+}
+
 #game-info {
     display: flex;
     justify-content: space-between;
     margin-bottom: 20px;
-}
-
-#mode-selection {
-    margin-bottom: 20px;
-}
-
-#mode-select {
-    padding: 5px 10px;
-    font-size: 16px;
-    border-radius: 5px;
 }
 
 #word-display {
@@ -84,6 +84,65 @@ h1 {
     margin-top: 20px;
     font-size: 18px;
     color: #007bff;
+}
+
+/* Side Menu */
+.side-menu {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+    color: white;
+}
+
+.side-menu h2 {
+    color: white;
+    margin-left: 30px;
+}
+
+.side-menu label, .side-menu select {
+    color: white;
+    display: block;
+    margin: 20px 30px;
+}
+
+.side-menu input[type="checkbox"] {
+    margin-left: 30px;
+    transform: scale(1.5);
+}
+
+.close-menu {
+    position: absolute;
+    top: 10px;
+    right: 25px;
+    font-size: 36px;
+    cursor: pointer;
+}
+
+/* Dark Mode Styling */
+body.dark-mode {
+    background-color: #333;
+    color: white;
+}
+
+body.dark-mode .container {
+    background-color: #222;
+    color: white;
+}
+
+body.dark-mode .word-input {
+    background-color: #555;
+    color: white;
+}
+
+body.dark-mode .start-btn {
+    background-color: #007bff;
 }
 
 @media screen and (max-width: 480px) {
